# attribute

./: .gitignore  .pre-commit-config.yaml  .venv  Dockerfile  README.md  accuracy.py  att  attribution_graph.json  attribution_graph.py  attribution_graph_visualization.html  attributor.py  autopatch.py  build-docker.sh  cache.py  cache_activations  cache_activations_sync  compile.py  evaluate.py  evaluate_ce_loss.py  feature_vis.py  forward.py  pyproject.toml  self_explanation.py  serve.ipynb  serve.py  setup.sh  visualize_graphy.ipynb
attribute/: __init__.py  __main__.py  caching.py  mlp_attribution.py  nodes.py  utils.py
attribution-graphs-frontend/: .gitignore  index.html  serve.py  util.js
attribution-graphs-frontend/addition/: index.html  init-add-big-feature.js  init-add-connections.js  init.js  style.css  util-add.js
attribution-graphs-frontend/attribution_graph/: cg.css  init-cg-feature-detail.js  init-cg-link-graph.js  init-cg-node-connections.js  init-cg-subgraph.js  init-cg.js  util-cg.js
attribution-graphs-frontend/attribution_graph/gridsnap/: init-gridsnap.js
attribution-graphs-frontend/feature_examples/: feature-examples.css  init-feature-examples-list.js  init-feature-examples-logits.js  init-feature-examples.js
attribution-graphs-frontend/lib/: jetpack_2024-07-20.js  npy_v0.js
experiments/: accuracy.py  convert_gemma.py  convert_gemmascope.py  convert_relu.py  converter.py  evaluate.py  plot_eval.py  self_explanation.py  supernode_steer.py  test_plt.py  test_tl.py
scripts/: accuracies  att  cache_activations
