[project]
name = "attribution-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eai-delphi",
    "eai-sparsify",
    "eindex>=0.1.0",
    "fire>=0.7.0",
    "jax>=0.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "nnsight>=0.4.5",
    "orjson>=3.10.16",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
    "simple-parsing>=0.1.7",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[tool.uv.sources]
eai-delphi = { git = "https://github.com/EleutherAI/delphi" }
# eai-sparsify = { path = "../e2e", editable = true }
eai-sparsify = { git = "https://github.com/EleutherAI/sparsify", branch="clt" }


[tool.ruff]
exclude = ["feature_vis.py", "accuracy.py"]
# Ignore F722 for jaxtyping
ignore = ["F722"]
