[project]
name = "attribution-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eai-delphi",
    "eai-sparsify",
    "eindex>=0.1.0",
    "fire>=0.7.0",
    "jax>=0.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "nnsight>=0.4.5",
    "orjson>=3.10.16",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
    "seaborn>=0.13.2",
    "simple-parsing>=0.1.7",
    "torch>=2.7.0",
    "pytorch-triton>=3.3.0",
    "transformers>=4.51.3",
    "gradio>=5.30.0",
    "neuronpedia>=1.0.20",
    "datasets>=2.14.6",
]

[tool.setuptools]
packages = ["attribute"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
[tool.uv]
override-dependencies = [
    "vllm ; sys_platform == 'never'",
    "xformers ; sys_platform == 'never'",
]
prerelease = "allow"
[tool.uv.sources]
torch = [
    { index = "pytorch" },
]
pytorch-triton = [
    { index = "pytorch" }
]

eai-delphi = { git = "https://github.com/EleutherAI/delphi" }
# eai-sparsify = { path = "../e2e", editable = true }
eai-sparsify = { git = "https://github.com/EleutherAI/clt-training", branch="clt" }


[tool.ruff]
exclude = ["experiments/*.py"]
# Ignore F722 for jaxtyping
ignore = ["F722"]
